--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,5 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+
+<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * --
 
 <style>
   :host {
@@ -302,7 +296,7 @@
   }
 </style>
 
-<!-- Toolbar -->
+<-- Toolbar --
 <div class="toolbar" role="banner">
   <img
     width="40"
@@ -327,7 +321,7 @@
 
 <div class="content" role="main">
 
-  <!-- Highlight Card -->
+  <-- Highlight Card --
   <div class="card highlight-card card-small">
 
     <svg id="rocket" xmlns="http://www.w3.org/2000/svg" width="101.678" height="101.678" viewBox="0 0 101.678 101.678">
@@ -350,7 +344,7 @@
 
   </div>
 
-  <!-- Resources -->
+  <-- Resources --
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
 
@@ -386,7 +380,7 @@
 
   </div>
 
-  <!-- Next Steps -->
+  <-- Next Steps --
   <h2>Next Steps</h2>
   <p>What do you want to do next with your app?</p>
 
@@ -424,7 +418,7 @@
     </button>
   </div>
 
-  <!-- Terminal -->
+  <-- Terminal --
   <div class="terminal" [ngSwitch]="selection.value">
       <pre *ngSwitchDefault>ng generate component xyz</pre>
       <pre *ngSwitchCase="'material'">ng add @angular/material</pre>
@@ -434,7 +428,7 @@
       <pre *ngSwitchCase="'build'">ng build</pre>
   </div>
 
-  <!-- Links -->
+  !-- Links --
   <div class="card-container">
     <a class="circle-link" title="Find a Local Meetup" href="https://www.meetup.com/find/?keywords=angular" target="_blank" rel="noopener">
       <svg xmlns="http://www.w3.org/2000/svg" width="24.607" height="23.447" viewBox="0 0 24.607 23.447">
@@ -452,7 +446,7 @@
     </a>
   </div>
 
-  <!-- Footer -->
+  <-- Footer --
   <footer>
       Love Angular?&nbsp;
       <a href="https://github.com/angular/angular" target="_blank" rel="noopener"> Give our repo a star.
@@ -472,13 +466,68 @@
   </svg>
 
 </div>
+-->
 
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+
+<div>
+    <div style="text-align: center;">
+      <h1>VENDA MAIS APP</h1>
+      <h2>SEJA BEM VINDO À PLATAFORMA DE FIDELIZAÇÃO DE CLIENTES</h2>
+      <div class="textolongo">
+        <p>Ofereça aos seus clientes fiéis vantagens exclusivas com uma comunicação
+              simplificada e direta para otimizar suas vendas</p>
+      </div>
+
+    </div>
+
+
+
+  <div class="container" style="border-bottom: 20px;">
+    <div>
+
+      <button mat-raised-button class="botaolink" style="background-image: url('../assets/portal_cinza.png');"
+              onclick="location.href='https://portal.vendamaisapp.com';">
+      </button>
+
+    </div>
+
+    <div>
+      <button mat-raised-button class="botaolink" style="background-image: url('../assets/banner_cinza.png');"
+              onclick="location.href='https://app.vendamaisapp.com';">
+      </button>
+
+    </div>
+  </div>
+
+  <div class="container" style="border-top: 20px;">
+    <div class="descricao">
+      <p>Acessando o portal voce pode se cadastrar e configurar o aplicativo para ficar com a cara da sua marca, depois é só compartilhar comseus clientes mais frequentes para que eles possam receber suas ofertas direto com todos os detalhes e o link para compra de seus produtos sem intermediarios nem taxas sobre as vendas.</p>
+    </div>
+    <div class="descricao">
+      <p>Acesse aqui o aplicativo para receer as notificações com ofertas e baixe ele no seu smartphone ou aténo pc</p>
+    </div>
+  </div>
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <router-outlet></router-outlet>
