--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -469,42 +469,69 @@
 -->
 
 
-<div>
-    <div style="text-align: center;">
-      <h1>VENDA MAIS APP</h1>
-      <h2>SEJA BEM VINDO À PLATAFORMA DE FIDELIZAÇÃO DE CLIENTES</h2>
-      <div class="textolongo">
-        <p>Ofereça aos seus clientes fiéis vantagens exclusivas com uma comunicação
-              simplificada e direta para otimizar suas vendas</p>
-      </div>
 
+
+<header>
+  <img src="../assets/venda mais app - segoe script em negrito.png" alt="Descrição da imagem"
+  style="width: 100%; height: auto;">
+  <div style="text-align: center;">
+
+    <h2 style="font-size: 40px; font-weight: bolder; color: darkgray; margin-bottom: 20px;"
+    >SEJA BEM VINDO À PLATAFORMA DE FIDELIZAÇÃO DE CLIENTES</h2>
+    <div class="textolongo" style="width: 90%; margin: 0 auto;">
+      <p>Ofereça aos seus clientes fiéis vantagens exclusivas com uma comunicação
+            simplificada e direta para otimizar suas vendas</p>
     </div>
+
+  </div>
+</header>
+
+
+<div>
 
 
 
   <div class="container" style="border-bottom: 20px;">
     <div>
 
+      <div>
+        <br><br>
+        <div class="descricao" style="text-align: center;">
+          <p>Visite nosso portal do cliente.</p>
+        </div>
       <button mat-raised-button class="botaolink" style="background-image: url('../assets/portal_cinza.png');"
               onclick="location.href='https://portal.vendamaisapp.com';">
       </button>
+      <br><br>
+      <div class="descricao">
+        <p>Acessando o portal voce pode se cadastrar e configurar o aplicativo para ficar com a cara da sua marca, depois é só compartilhar comseus clientes mais frequentes para que eles possam receber suas ofertas direto com todos os detalhes e o link para compra de seus produtos sem intermediarios nem taxas sobre as vendas.</p>
+      </div>
+      </div>
 
     </div>
 
     <div>
+      <div>
+        <br><br>
+        <div class="descricao" style="text-align: center;">
+          <p>Conheça o app para seus clientes!</p>
+        </div>
       <button mat-raised-button class="botaolink" style="background-image: url('../assets/banner_cinza.png');"
               onclick="location.href='https://app.vendamaisapp.com';">
       </button>
+      <br><br>
+      <div class="descricao">
+        <p >Acesse aqui o aplicativo para receber as notificações com ofertas e baixe ele no seu smartphone ou aténo pc</p>
+      </div>
+      </div>
 
     </div>
   </div>
 
-  <div class="container" style="border-top: 20px;">
-    <div class="descricao">
-      <p>Acessando o portal voce pode se cadastrar e configurar o aplicativo para ficar com a cara da sua marca, depois é só compartilhar comseus clientes mais frequentes para que eles possam receber suas ofertas direto com todos os detalhes e o link para compra de seus produtos sem intermediarios nem taxas sobre as vendas.</p>
-    </div>
-    <div class="descricao">
-      <p>Acesse aqui o aplicativo para receer as notificações com ofertas e baixe ele no seu smartphone ou aténo pc</p>
+  <div>
+    <div class="container" style="border-top: 20px;">
+
+
     </div>
   </div>
 
